--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="icon" href="https://cfdcircle.vn/favicon.ico" />
+    <title>CFD Courses</title>
     <link rel="stylesheet" href="/dest/style.min.css" />
     <link rel="stylesheet" href="/dest/fonts.css" />
     <link rel="stylesheet" href="/dest/stylelibs.min.css" />
